[package]
name = "vpnglean"
version = "0.1.0"
edition = "2021"

[lib]
name = "vpnglean"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
glean = { path = "../3rdparty/glean/glean-core/rlb" }
glean-core = { path = "../3rdparty/glean/glean-core" }
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.13.1"
log = "0.4.17"
ffi-support = "0.4.4"
