[package]
name = "vpnglean"
version = "0.1.0"
edition = "2021"

[lib]
name = "vpnglean"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
ffi-support = "0.4.4"
glean = { path = "../3rdparty/glean/glean-core/rlb" }
reqwest = { version = "0.11", features = ["blocking", "json"] }

[build-dependencies]
cbindgen = "0.24.3"
