[package]
name = "vpnglean"
version = "0.1.0"
edition = "2021"

[lib]
name = "vpnglean"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
ffi-support = "0.4.4"
glean = { path = "../3rdparty/glean/glean-core/rlb" }
glean-core = { path = "../3rdparty/glean/glean-core" }
log = "0.4.17"
once_cell = "1.16.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0.147"
serde_json = "1.0.93"

[build-dependencies]
cbindgen = "0.24.3"
