[package]
name = "mozillavpnnp"
version = "0.1.0"
edition = "2018"

[dependencies]
mio = { version = "1.0.3", features = ["os-poll", "net"] }
serde_json = "1.0.140"
byteorder = "1.5.0"
sysinfo = "0.33.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.1", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
] }
